agrege componentes y modulos footer y sobremi

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -62,14 +62,22 @@
         <div class="navbar-container-icon-redes">
           <div class="navbar-content-div--redes-desktop flex justify-around gap-4 space-x-1">
 <div>
-  <i class="navbar-content-div-redes-icon fa-brands fa-linkedin hover:bg-gray-700  hover:text-white rounded-md px-3 py-2"></i>
+  <a href="https://www.linkedin.com/in/matias-sabbadini-desarrollador/" target="_blank">
+    <i class="navbar-content-div-redes-icon fa-brands fa-linkedin hover:bg-gray-700  hover:text-white rounded-md px-3 py-2"></i>
+  </a>
+  
 </div>
          
 <div>
-  <i class="navbar-content-div-redes-icon fa-brands fa-whatsapp hover:bg-gray-700  hover:text-white rounded-md px-3 py-2 "></i>
+  <a href="https://walink.co/6dc120" target="_blank">
+    <i class="navbar-content-div-redes-icon fa-brands fa-whatsapp hover:bg-gray-700  hover:text-white rounded-md px-3 py-2 "></i>
+  </a>
+
 </div>
            <div>
-            <i class="navbar-content-div-redes-icon fa-solid fa-envelope hover:bg-gray-700  hover:text-white rounded-md  px-3 py-2"></i>
+             <a href="mailto:matiassabbadini24@gmail.com" target="_blank">
+              <i class="navbar-content-div-redes-icon fa-solid fa-envelope hover:bg-gray-700  hover:text-white rounded-md  px-3 py-2"></i>
+             </a>
            </div>
           </div>
         </div>
