--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-navbar></app-navbar>
-<app-sobre-mi></app-sobre-mi>
-<app-footer></app-footer>
+<div class="App">
+  <router-outlet></router-outlet>
+</div>
+
