--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,18 +1,18 @@
-<footer class="bg-gray-800 rounded-sm w-full">
-  <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Matias Sabbadini™</a>. All Rights Reserved.
+<footer class="footer-contenedor bg-gray-800 rounded-sm w-full">
+  <div class="footer-contenedor--div w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+    <span class="footer-contenedor--div-span text-smsm:text-center">© 2023 <a href="https://flowbite.com/" class="hover:underline">Matias Sabbadini™</a>. All Rights Reserved.
   </span>
-  <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
-      <li>
+  <ul class="footer-contenedor--ul flex flex-wrap items-center mt-3 text-sm font-medium sm:mt-0">
+      <li class="footer-contenedor--ul-li">
           <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
       </li>
-      <li>
+      <li class="footer-contenedor--ul-li">
           <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
       </li>
-      <li>
+      <li class="footer-contenedor--ul-li">
           <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
       </li>
-      <li>
+      <li class="footer-contenedor--ul-li">
           <a href="#" class="hover:underline">Contact</a>
       </li>
   </ul>
