--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 .navbar-button-toggle-content{
-  margin-top: 192px;
+  margin-top: 216px;
   width: 140px;
   position: absolute;
   left: -8px;
@@ -7,6 +7,7 @@
 
 .navbar-container-icon-list-img--desktop{
   display: none;
+  cursor: pointer;
 }
 
 .navbar-container-icon-list-img--mobile{
@@ -20,13 +21,15 @@
 
 .navbar-button-toggle--icon{
   font-size: 25px;
-  color: #FCF8FF;
+  color: var(--colorLetrasHeader);
+   cursor: pointer;
 }
 
 .navbar-button-toggle--a{
   font-size: 23px !important;
-  color: #FCF8FF;
+  color: var(--colorLetrasHeader);
   font-family: var(--tipografiaHeader);
+   cursor: pointer;
 }
 
 .navbar-container-icon-redes{
@@ -67,12 +70,9 @@
 
   .navbar-container-icon-list{
     align-items: center !important;
-    justify-content: space-between !important;
   }
 
-  .navbar-content-div-list{
-    gap: 25%;
-  }
+  
 
 .navbar-container-icon-list-img--mobile{
   display: none;
@@ -80,46 +80,46 @@
 
   .navbar-container-icon-list-img--desktop{
     display: block;
-    width: 145px;
+    position: relative;
+    right: 15%;
+    width: 150px;
     height: 50px;
   }
 
-  .navbar-content-div--list-desktop{
-    gap: 2em;
-  }
+  
 
   .navbar-content-div--a-desktop{
-color: #FCF8FF;
+color: var(--colorLetrasHeader);
 font-size: 13px !important;
 font-family: var(--tipografiaHeader);
   }
 
   .navbar-content-div--icon{
-    color: #FCF8FF;
+    color: var(--colorLetrasHeader);
     font-size: 13px;
   }
 
+
+
   .navbar-container-icon-redes{
     display: flex;
-    justify-content: space-around;
-    color: #FCF8FF;
+    color: var(--colorLetrasHeader);
     font-size: 13px;
   }
+
+  
 }
 
 
 @media (min-width: 1024px) {
- 
- 
-
   .navbar-container-icon-list-img--desktop{
-    display: block;
-    width: 150px;
-    height: 55px;
+    right: 15%;
+    width: 170px;
+    height: 60px;
   }
 
-  .navbar-content-div--list-desktop{
-    gap: 2em;
+  .navbar-content-div--container{
+    gap: 8rem !important;
   }
 
   .navbar-content-div--a-desktop{
@@ -137,14 +137,14 @@ font-size: 20px !important;
 }
 
 @media (min-width: 1336px) {
- 
   .navbar-container-icon-list-img--desktop{
-    width: 160px;
-    height: 60px;
+    right: 25%;
+    width: 100%;
+    height: 70px;
   }
 
-  .navbar-content-div--list-desktop{
-    gap: 3em;
+  .navbar-content-div--container{
+    gap: 20rem !important;
   }
 
   .navbar-content-div--a-desktop{
@@ -154,6 +154,10 @@ font-size: 25px !important;
   .navbar-content-div--icon{
     font-size: 25px;
   }
+
+.navbar-content-div--redes-desktop{
+  gap: 1.5rem !important;
+}
 
   .navbar-container-icon-redes{
     font-size: 25px;
