--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -25,9 +25,9 @@
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
             <a  routerLink="skills" routerLinkActive="active" class="navbar-button-toggle--a hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Skill</a>
 
-            <a href="#" class="navbar-button-toggle--a hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Proyectos</a>
+            <a routerLink="proyectos" routerLinkActive="active"class="navbar-button-toggle--a hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Proyectos</a>
 
-            <a href="#" class="navbar-button-toggle--a hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Cursos</a>
+            <a routerLink="cursos" routerLinkActive="active" class="navbar-button-toggle--a hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Cursos</a>
           </div>
       </div>
       </div>
@@ -38,16 +38,16 @@
       <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
 <div class="hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium items-center flex gap-1">
 <i class="navbar-content-div--icon fa-solid fa-brain"></i>
-<a href="#" class="navbar-content-div--a-desktop">Skill</a>
+<a routerLink="skills" routerLinkActive="active" class="navbar-content-div--a-desktop">Skill</a>
 </div>
 
 <div class="hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium items-center flex gap-1">
 <i class="navbar-content-div--icon fa-solid fa-diagram-project"></i>
-<a href="#" class="navbar-content-div--a-desktop">Proyectos</a>
+<a routerLink="proyecto" routerLinkActive="active" class="navbar-content-div--a-desktop">Proyectos</a>
 </div>
      <div class="hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium items-center flex gap-1">
       <i class="navbar-content-div--icon fa-solid fa-graduation-cap"></i>
-      <a href="#" class="navbar-content-div--a-desktop ">Cursos</a>
+      <a routerLink="cursos" routerLinkActive="active" class="navbar-content-div--a-desktop ">Cursos</a>
      </div>
 
     </div>
@@ -55,9 +55,10 @@
   <div class="flex flex-1 items-center  sm:items-stretch sm:justify-center">
     <div class="flex flex-shrink-0 items-center">
       <div class="navbar-container-icon-list">
-        <img class="navbar-container-icon-list-img--mobile" src="../../../../assets/Logo-icon.png" alt="Logo Icono">
-        <img class="navbar-container-icon-list-img--desktop" src="../../../../assets/Logo-icon.png" alt="Logo Icono">
-        <a href="/"></a>
+        <a routerLink="/" routerLinkActive="active">
+        <img class="navbar-container-icon-list-img--mobile"  src="../../../../assets/Logo-icon.png" alt="Logo Icono">
+        <img class="navbar-container-icon-list-img--desktop"  src="../../../../assets/Logo-icon.png" alt="Logo Icono">
+      </a>
       </div>
     </div>
     </div>
