dando estilos al home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,17 @@
-holaaaa
+<div class="home-container">
+  <div class="home-container-card-presentacion">
+      <div class="home-card">
+        <div class="home-card-overlay"></div>
+        <div class="home-card-inner"> <img class="home-card--img" src="../../assets/FotoPerfil.png"/></div>
+      </div>
+    <div class="home-container-titulo-subtitulo">
+      <div class="home-container-container">
+        <p class="home-container-container--parrafo">Hola soy</p>
+      <h1 class="home-container-container--titulo">Matias Sabbadini</h1>
+      </div>
+<div class="home-container-container2">
+    <h2 class="home-container-container2--subtitulo">Front-End Developer</h2>
+</div>
+    </div>
+  </div>
+</div>
