--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
 
 :root{
   --tipografiaHeader: 'Nunito', sans-serif;
   --colorLetrasHeader: #FCF8FF;
+  --tipografiaGeneral: 'Space Grotesk', sans-serif;
+
 }
 
 * {
