--- a/src/app/skilles/skills.component.html
+++ b/src/app/skilles/skills.component.html
@@ -1,5 +1,12 @@
 
- <div>
-<app-informacion></app-informacion>
+ <div class="skills-container">
+  <div class="skills-container-titulo">
+    <h1 class="skills-container-titulo--titulo">
+      Skills
+    </h1>
+  </div>
+<div class="skill-container-informacion">
+  <app-informacion></app-informacion>
+</div>
  </div>
 
