--- a/src/app/skilles/informacion/informacion.component.css
+++ b/src/app/skilles/informacion/informacion.component.css
@@ -1,5 +1,13 @@
 /* From uiverse.io by @FrM-bot */
-.card {
+.informacion-container-card{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+}
+
+.informacion-card {
   width: 200px;
   height: min-content;
   transition: all .3s;
@@ -8,11 +16,11 @@
   box-shadow: 0px 15px 20px -5px rgba(0, 0, 0, 0.5);
 }
 
-.card:hover {
+.informacion-card:hover {
   transform: scale(1.03);
 }
 
-.img {
+.informacion-img {
   transition: all .3s;
   background: #ff0084;
   background: -webkit-linear-gradient(to right, #33001b, #ff0084);
@@ -20,18 +28,18 @@
   width: 100%;
 }
 
-.img:hover {
+.informacion-img:hover {
   transform: scale(1.3);
 }
 
-.img-container {
+.informacion-img-container {
   display: grid;
   border-radius: .5rem 2rem;
   height: 270px;
   overflow: hidden;
 }
 
-.description {
+.informacion-description {
   position: absolute;
   bottom: .5rem;
   left: .5rem;
@@ -51,6 +59,6 @@
   box-shadow: none;
 }
 
-.title {
+.informacion-title {
   color: aliceblue;
 }
