--- a/src/app/skilles/informacion/informacion.component.html
+++ b/src/app/skilles/informacion/informacion.component.html
@@ -18,7 +18,7 @@
   <div class="flex flex-column max-w-sm w-full lg:max-w-full lg:flex my-2">
     <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
         <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2>
+          <h2 class="informacion-container-titulo">
             HTML
           </h2>
         </div>
@@ -30,7 +30,7 @@
                 <img class="w-10 h-10 rounded-full mr-4" [src]="html.imagen" alt="Avatar of Jonathan Reinink">
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none">{{html.nombre}}</p>
+                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{html.nombre}}</p>
               </div>
             </div>
           </div>
@@ -43,7 +43,7 @@
     <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
       <div class="mb-8">
         <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2>
+          <h2 class="informacion-container-titulo">
             CSS
           </h2>
         </div>
@@ -56,7 +56,7 @@
                 <img class="w-10 h-10 rounded-full mr-4" [src]="css.imagen" alt="Avatar of Jonathan Reinink">
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none">{{css.nombre}}</p>
+                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{css.nombre}}</p>
               </div>
             </div>
           </div>
@@ -69,7 +69,7 @@
     <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
       <div class="mb-8">
         <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2>
+          <h2 class="informacion-container-titulo">
             Javascript
           </h2>
         </div>
@@ -82,7 +82,7 @@
                 <img class="w-10 h-10 rounded-full mr-4" [src]="javascript.imagen" alt="Avatar of Jonathan Reinink">
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none">{{javascript.nombre}}</p>
+                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{javascript.nombre}}</p>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
   <div class="flex max-w-sm w-full lg:max-w-full lg:flex my-2">
     <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
         <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2>
+          <h2 class="informacion-container-titulo">
             Backend
           </h2>
       </div>
@@ -106,7 +106,7 @@
                 <img class="w-10 h-10 rounded-full mr-4" [src]="backend.imagen" alt="Avatar of Jonathan Reinink">
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none">{{backend.nombre}}</p>
+                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{backend.nombre}}</p>
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
   <div class="flex max-w-sm w-full lg:max-w-full lg:flex my-2">
     <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
         <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2>
+          <h2 class="informacion-container-titulo">
             Otros
           </h2>
       </div>
@@ -130,7 +130,7 @@
                 <img class="w-10 h-10 rounded-full mr-4" [src]="otros.imagen" alt="Avatar of Jonathan Reinink">
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none">{{otros.nombre}}</p>
+                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{otros.nombre}}</p>
               </div>
             </div>
           </div>
