cargue datos en comoponente cursos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,15 @@
+
+
 <div class="home-container">
   <div class="home-container-card-presentacion">
-      <div class="home-card">
-        <div class="home-card-overlay"></div>
-        <div class="home-card-inner"> <img class="home-card--img" src="../../assets/FotoPerfil.png"/></div>
+    <div class="max-w-sm w-full lg:max-w-full lg:flex">
+      <div class="home-card  p-4 flex flex-col justify-between leading-normal">
+        <div class="home-card__content flex items-center ">
+          <div class="home-card-inner  mr-4"> <img class="home-card--img" src="../../assets/FotoPerfil.png"/></div>
+        </div>
       </div>
+    </div>
+
     <div class="home-container-titulo-subtitulo">
       <div class="home-container-container">
         <p class="home-container-container--parrafo">Hola soy</p>
@@ -15,3 +21,5 @@
     </div>
   </div>
 </div>
+
+
