--- a/src/app/cursos/cursos.component.css
+++ b/src/app/cursos/cursos.component.css
@@ -1,8 +1,9 @@
-.skills-container{
+.cursos-container{
   background: #07c4ff;
 }
 
-.skills-container-titulo{
+
+.cursos-container-titulo{
   width: 100%;
   height: 80px;
   background-color: #0080d9;
@@ -12,14 +13,9 @@
   margin-bottom: 2em;
 }
 
-.skills-container-titulo--titulo{
+.cursos-titulo{
   font-size: 40px;
   font-weight: 800;
   font-family: var(--tipografiaHeader);
 color: aliceblue;
-}
-
-.skill-container-informacion{
-  display: flex;
-  justify-content: center;
 }
