--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .home-container{
   height: 100vh;
-  background: #0081CF;
+  background: #07c4ff;
   display: flex;
 flex-direction: column;
 justify-content: center;
@@ -24,20 +24,21 @@ align-items: center;
 
 
 .home-card {
-  --bg: #e8e8e8;
-  --contrast: #e2e0e0;
-  --grey: #93a1a1;
-  position: relative;
-  padding: 9px;
-  background-color: var(--bg);
-  border-radius: 50%;
+  height: 268px;
+  border-radius: 25%;
+  border: none;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
 }
 
-.home-card-overlay {
-  position: absolute;
-  inset: 0;
-  pointer-events: none;
-  filter: opacity(10%) contrast(105%);
+.home-card__content {
+  background: rgb(5, 6, 45);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 235px;
+  border-radius: 25%;
+  border: none;
 }
 
 .home-card-inner {
@@ -47,17 +48,15 @@ align-items: center;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  width: 190px;
-  height: 254px;
-  background-color: var(--contrast);
-  border-radius: 50%;
+  width: auto;
+  height: auto;
 }
 
 
 
 .home-card--img{
-  width: 250px;
-  height: 250px;
+    width: 180px;
+    height: 190px;
 }
 
 .home-container-container--parrafo{
