--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -2,19 +2,27 @@
   <div class="footer-contenedor--div w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
     <span class="footer-contenedor--div-span text-smsm:text-center">© 2023 <a href="https://flowbite.com/" class="hover:underline">Matias Sabbadini™</a>. All Rights Reserved.
   </span>
-  <ul class="footer-contenedor--ul flex flex-wrap items-center mt-3 text-sm font-medium sm:mt-0">
-      <li class="footer-contenedor--ul-li">
-          <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
-      </li>
-      <li class="footer-contenedor--ul-li">
-          <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
-      </li>
-      <li class="footer-contenedor--ul-li">
-          <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
-      </li>
-      <li class="footer-contenedor--ul-li">
-          <a href="#" class="hover:underline">Contact</a>
-      </li>
-  </ul>
+  <div class="footer-contenedor-redes">
+    <div class="flex justify-around gap-4 space-x-1">
+<div>
+<a href="https://www.linkedin.com/in/matias-sabbadini-desarrollador/" target="_blank">
+<i class="footer-contenedor-redes-iconos fa-brands fa-linkedin hover:bg-gray-700  hover:text-white rounded-md px-3 py-2"></i>
+</a>
+
+</div>
+
+<div>
+<a href="https://walink.co/6dc120" target="_blank">
+<i class=" footer-contenedor-redes-iconos fa-brands fa-whatsapp hover:bg-gray-700  hover:text-white rounded-md px-3 py-2 "></i>
+</a>
+
+</div>
+     <div>
+       <a href="mailto:matiassabbadini24@gmail.com" target="_blank">
+        <i class="footer-contenedor-redes-iconos fa-solid fa-envelope hover:bg-gray-700  hover:text-white rounded-md  px-3 py-2"></i>
+       </a>
+     </div>
+    </div>
+  </div>
   </div>
 </footer>
