--- a/src/app/skilles/informacion/informacion.component.css
+++ b/src/app/skilles/informacion/informacion.component.css
@@ -8,7 +8,7 @@
 }
 
 .informacion-card {
-  width: 200px;
+  width: 80vw;
   height: min-content;
   transition: all .3s;
   position: relative;
@@ -20,44 +20,6 @@
   transform: scale(1.03);
 }
 
-.informacion-img {
-  transition: all .3s;
-  background: #ff0084;
-  background: -webkit-linear-gradient(to right, #33001b, #ff0084);
-  background: linear-gradient(to right, #33001b, #ff0084);
-  width: 100%;
-}
-
-.informacion-img:hover {
-  transform: scale(1.3);
-}
-
-.informacion-img-container {
-  display: grid;
-  border-radius: .5rem 2rem;
-  height: 270px;
-  overflow: hidden;
-}
-
-.informacion-description {
-  position: absolute;
-  bottom: .5rem;
-  left: .5rem;
-  text-align: start;
-  padding: .5rem 1em;
-  width: 90%;
-  transition: all 0.5s ease;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  backdrop-filter: blur(.1rem);
-  background-color: rgba(0, 0, 0, 0.2);
-  border-radius: .5rem 2rem;
-}
-
-.description:hover {
-  transform: perspective(100px) translateX(7px) rotateX(3deg) rotateY(3deg) scale(1);
-  box-shadow: none;
-}
 
 .informacion-title {
   color: aliceblue;
@@ -73,4 +35,59 @@
   margin-top: 0.1em;
   font-family: var(--tipografiaGeneral);
   font-size: 20px;
+}
+
+.informacion-container-card-nombre{
+  font-weight: 700;
+}
+
+
+@media (min-width: 768px) {
+  
+  .informacion-container-card-nombre{
+    font-size: 20px;
+  }
+
+  .informacion-container-card-imagen{
+    width: 100px !important;
+    height: 100px !important;
+  }
+
+.informacion-card-container--img-nombre{
+  gap: 2em !important;
+}
+}
+
+
+@media (min-width: 1024px) {
+  
+  .informacion-container-card-nombre{
+    font-size: 23px;
+  }
+
+  .informacion-container-card-imagen{
+    width: 120px !important;
+    height: 120px !important;
+  }
+
+.informacion-card-container--img-nombre{
+  gap: 4em !important;
+}
+}
+
+
+@media (min-width: 1440px) {
+  
+  .informacion-container-card-nombre{
+    font-size: 25px;
+  }
+
+  .informacion-container-card-imagen{
+    width: 150px !important;
+    height: 150px !important;
+  }
+
+.informacion-card-container--img-nombre{
+  gap: 9em !important;
+}
 }
