--- a/src/app/skilles/informacion/informacion.component.html
+++ b/src/app/skilles/informacion/informacion.component.html
@@ -14,23 +14,35 @@
     </div>
   </div>
 </div> -->
-<div class="informacion-container container">
-  <div class="flex flex-column max-w-sm w-full lg:max-w-full lg:flex my-2">
-    <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
-        <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2 class="informacion-container-titulo">
-            HTML
-          </h2>
-        </div>
+<div class="informacion-container-card container">
+  <div class=" flex flex-column  lg:flex my-2">
+    <div
+      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+    >
+      <div class="text-gray-900 font-bold text-xl mb-2">
+        <h2 class="informacion-container-titulo text-center">HTML</h2>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+      </div>
       <div>
-        <div class="flex flex-row flex-wrap gap-5">
-          <div class="flex flex-cols-2 flex-wrap items-center" *ngFor="let html of htmldata">
+        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+          <div
+            class="flex flex-cols-2 flex-wrap items-center"
+            *ngFor="let html of htmldata"
+          >
             <div class="flex flex-col flex-wrap">
-              <div>
-                <img class="w-10 h-10 rounded-full mr-4" [src]="html.imagen" alt="Avatar of Jonathan Reinink">
+              <div class="informacion-card-container--img">
+                <img
+                  class="informacion-container-card-imagen w-10 h-10 mr-4"
+                  [src]="html.imagen"
+                  alt="Avatar of Jonathan Reinink"
+                />
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{html.nombre}}</p>
+                <p
+                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                >
+                  {{ html.nombre }}
+                </p>
               </div>
             </div>
           </div>
@@ -39,24 +51,34 @@
     </div>
   </div>
 
-  <div class="flex flex-row max-w-sm w-full lg:max-w-full lg:flex my-2">
-    <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
-      <div class="mb-8">
-        <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2 class="informacion-container-titulo">
-            CSS
-          </h2>
-        </div>
+  <div class=" flex flex-column  lg:flex my-2">
+    <div
+      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+    >
+      <div class="text-gray-900 font-bold text-xl mb-2">
+        <h2 class="informacion-container-titulo text-center">CSS</h2>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
       </div>
       <div>
-        <div class="flex flex-row flex-wrap gap-5">
-          <div class="flex items-center" *ngFor="let css of cssdata">
-            <div class="flex flex-col">
-              <div>
-                <img class="w-10 h-10 rounded-full mr-4" [src]="css.imagen" alt="Avatar of Jonathan Reinink">
+        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+          <div
+            class="flex flex-cols-2 flex-wrap items-center"
+            *ngFor="let css of cssdata"
+          >
+            <div class="flex flex-col flex-wrap">
+              <div class="informacion-card-container--img">
+                <img
+                  class="informacion-container-card-imagen w-10 h-10 mr-4"
+                  [src]="css.imagen"
+                  alt="Avatar of Jonathan Reinink"
+                />
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{css.nombre}}</p>
+                <p
+                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                >
+                  {{ css.nombre }}
+                </p>
               </div>
             </div>
           </div>
@@ -65,24 +87,35 @@
     </div>
   </div>
 
-  <div class="flex flex-row max-w-sm w-full lg:max-w-full lg:flex my-2">
-    <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
-      <div class="mb-8">
-        <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2 class="informacion-container-titulo">
-            Javascript
-          </h2>
-        </div>
+
+  <div class=" flex flex-column  lg:flex my-2">
+    <div
+      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+    >
+      <div class="text-gray-900 font-bold text-xl mb-2">
+        <h2 class="informacion-container-titulo text-center">Javascript</h2>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
       </div>
       <div>
-        <div class="flex flex-row flex-wrap gap-5">
-        <div class="flex flex-row" *ngFor="let javascript of javascriptdata">
-            <div class="flex flex-col">
-              <div>
-                <img class="w-10 h-10 rounded-full mr-4" [src]="javascript.imagen" alt="Avatar of Jonathan Reinink">
+        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+          <div
+            class="flex flex-cols-2 flex-wrap items-center"
+            *ngFor="let javascript of javascriptdata"
+          >
+            <div class="flex flex-col flex-wrap">
+              <div class="informacion-card-container--img">
+                <img
+                  class="informacion-container-card-imagen w-10 h-10 mr-4"
+                  [src]="javascript.imagen"
+                  alt="Avatar of Jonathan Reinink"
+                />
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{javascript.nombre}}</p>
+                <p
+                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                >
+                  {{ javascript.nombre }}
+                </p>
               </div>
             </div>
           </div>
@@ -91,22 +124,34 @@
     </div>
   </div>
 
-  <div class="flex max-w-sm w-full lg:max-w-full lg:flex my-2">
-    <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
-        <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2 class="informacion-container-titulo">
-            Backend
-          </h2>
+  <div class=" flex flex-column  lg:flex my-2">
+    <div
+      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+    >
+      <div class="text-gray-900 font-bold text-xl mb-2">
+        <h2 class="informacion-container-titulo text-center">Backend</h2>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
       </div>
       <div>
-        <div class="flex flex-row flex-wrap gap-5">
-          <div class="flex flex-row items-center" *ngFor="let backend of backenddata">
-            <div class="flex flex-col">
-              <div>
-                <img class="w-10 h-10 rounded-full mr-4" [src]="backend.imagen" alt="Avatar of Jonathan Reinink">
+        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+          <div
+            class="flex flex-cols-2 flex-wrap items-center"
+            *ngFor="let backend of backenddata"
+          >
+            <div class="flex flex-col flex-wrap">
+              <div class="informacion-card-container--img">
+                <img
+                  class="informacion-container-card-imagen w-10 h-10 mr-4"
+                  [src]="backend.imagen"
+                  alt="Avatar of Jonathan Reinink"
+                />
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{backend.nombre}}</p>
+                <p
+                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                >
+                  {{ backend.nombre }}
+                </p>
               </div>
             </div>
           </div>
@@ -115,22 +160,34 @@
     </div>
   </div>
 
-  <div class="flex max-w-sm w-full lg:max-w-full lg:flex my-2">
-    <div class="flex flex-col border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 mx-3 leading-normal">
-        <div class="text-gray-900 font-bold text-xl mb-2">
-          <h2 class="informacion-container-titulo">
-            Otros
-          </h2>
+  <div class=" flex flex-column  lg:flex my-2">
+    <div
+      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+    >
+      <div class="text-gray-900 font-bold text-xl mb-2">
+        <h2 class="informacion-container-titulo text-center">Otros</h2>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
       </div>
       <div>
-        <div class="flex flex-row flex-wrap gap-5">
-          <div class="flex flex-row items-center" *ngFor="let otros of otrosdata">
-            <div class="flex flex-col">
-              <div>
-                <img class="w-10 h-10 rounded-full mr-4" [src]="otros.imagen" alt="Avatar of Jonathan Reinink">
+        <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
+          <div
+            class="flex flex-cols-2 flex-wrap items-center"
+            *ngFor="let otros of otrosdata"
+          >
+            <div class="flex flex-col flex-wrap">
+              <div class="informacion-card-container--img">
+                <img
+                  class="informacion-container-card-imagen w-10 h-10 mr-4"
+                  [src]="otros.imagen"
+                  alt="Avatar of Jonathan Reinink"
+                />
               </div>
               <div class="text-sm">
-                <p class="text-gray-900 leading-none informacion-container-titulo--nombre ">{{otros.nombre}}</p>
+                <p
+                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                >
+                  {{ otros.nombre }}
+                </p>
               </div>
             </div>
           </div>
@@ -139,9 +196,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
