--- a/src/app/skilles/skills.component.html
+++ b/src/app/skilles/skills.component.html
@@ -1,5 +1,5 @@
 
- <div class="skills-container">
+ <div class="skills-container mb-10">
   <div class="skills-container-titulo">
     <h1 class="skills-container-titulo--titulo">
       Skills
