--- a/src/app/sobre-mi/sobre-mi.component.html
+++ b/src/app/sobre-mi/sobre-mi.component.html
@@ -1,11 +1,11 @@
 <div class="sobremi-container">
   <div class="sobremi-container--subcontainer  px-6 pt-1 lg:px-8">
-    <div class="sobremi-container--subcontainer-img flex justify-center -space-x-1 overflow-hidden">
+  <!--   <div class="sobremi-container--subcontainer-img flex justify-center -space-x-1 overflow-hidden">
       <img class="sobremi-container--img  h-auto max-w-lg rounded-lg" src="../../../../assets/FotoPerfil.png" alt="">
-    </div>
+    </div> -->
     <div class="sobremi-container--subcontainer2 mx-auto max-w-2xl py-3 sm:py-4 lg:py-5">
       <div class="text-center">
-        <h1 class="sobremi-container--subcontainer--titulo text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Bienvenidos</h1>
+       <!--  <h1 class="sobremi-container--subcontainer--titulo text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Bienvenidos</h1> -->
         <p class="sobremi-container--subcontainer--parrafo mt-6 text-lg leading-8 text-gray-600">
           Hola me llamo Matias Sabbadini, tengo 31 años y naci en Neuquen, Argentina.
           Soy un estudiante de programación autodidacta con iniciativa y ganas de superarse.
