--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,9 @@
   box-sizing: border-box;
 }
 
-body { 
-  min-height: 100vh;
-  background-color: #e5e7eb;
+html,body { 
+ height: 100%;
+ background: #07c4ff;
 }
+
+
