arregle problema de footer

--- a/src/app/cursos/datos/datos.component.css
+++ b/src/app/cursos/datos/datos.component.css
@@ -1,3 +1,12 @@
+.cursos-datos-container{
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .cursos-datos-card-container{
   background-color: gray;
 }
