--- a/src/app/sobre-mi/sobre-mi.component.css
+++ b/src/app/sobre-mi/sobre-mi.component.css
@@ -1,4 +1,7 @@
 .sobremi-container{
+ display: flex;
+ height: 100%;
+align-items: stretch;
   flex-grow: 1;
 }
 
@@ -20,78 +23,3 @@ color: #161516;
   color: #161516;
 }
 
-@media (min-width: 1024px) {
-  .sobremi-container--img{
-    width: 250px;
-    height: 250px;
-    margin-top: 0em;
-  }
-
-  .sobremi-container{
-    height: auto;
-    display: flex;
-    justify-content: center !important;
-  align-items: center !important;
-  }
-
-.sobremi-container--subcontainer{
-  display: flex;
-  flex-direction: row-reverse;
-  gap: 3em;
-  align-items: center;
-  margin-top: 8%;
- 
-}
-
-}
-
-
-@media (min-width: 1336px) {
-  .sobremi-container--img{
-    width: 250px;
-    height: 250px;
-    margin-top: 0em;
-  }
-
-  .sobremi-container{
-    height: auto;
-    display: flex;
-    justify-content: center !important;
-  align-items: center !important;
-  }
-
-.sobremi-container--subcontainer{
-  display: flex;
-  flex-direction: row-reverse;
-  gap: 6em;
-  align-items: center;
-  margin-top: 3%;
- 
-}
-
-}
-
-@media (min-width: 1440px) {
-  .sobremi-container--img{
-    width: 250px;
-    height: 250px;
-    margin-top: 0em;
-  }
-
-  .sobremi-container{
-    height: auto;
-    display: flex;
-    justify-content: center !important;
-  align-items: center !important;
-  }
-
-.sobremi-container--subcontainer{
-  display: flex;
-  flex-direction: row-reverse;
-  gap: 20em;
-  align-items: center;
-  margin-top: 10%;
- 
-}
-
-}
