--- a/src/styles.css
+++ b/src/styles.css
@@ -16,9 +16,11 @@
   box-sizing: border-box;
 }
 
-html,body { 
+html,body {
+  width: 100%;
  height: 100%;
  background: #07c4ff;
+ scroll-behavior: smooth;
 }
 
 
