--- a/src/app/cursos/cursos.component.css
+++ b/src/app/cursos/cursos.component.css
@@ -1,5 +1,6 @@
 .cursos-container{
   background: #07c4ff;
+  margin-bottom: 2em;
 }
 
 
@@ -11,7 +12,11 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 2em;
+  box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
 }
+
 
 .cursos-titulo{
   font-size: 40px;
