--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,10 @@
 .home-container{
-  height: 100vh;
   background: #07c4ff;
+  margin-bottom: 2em;
   display: flex;
 flex-direction: column;
-justify-content: center;
-align-items: center;
+justify-content: center ;
+align-items: center ;
 }
 
 .home-container-card-presentacion{
@@ -12,14 +12,9 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
+margin-top: 1em;
+margin-bottom: 1em;
 gap: 3em;
-}
-
-.home-container-container{
-  display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
 }
 
 
