--- a/src/app/proyectos/proyectos.component.css
+++ b/src/app/proyectos/proyectos.component.css
@@ -1,5 +1,6 @@
 .proyectos-container{
   background: #07c4ff;
+  margin-bottom: 2em;
 }
 
 .proyectos-container-titulo{
@@ -10,6 +11,9 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 2em;
+  box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
 }
 
 .proyectos-container-titulo--titulo{
