--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,70 +1,67 @@
 <nav class="bg-gray-800 rounded-sm py-3">
   <div class="mx-auto max-w-7xl px-1 sm:px-1 lg:px-1">
     <div class="relative flex h-16 items-center justify-center">
-      <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-        <!-- Mobile menu button-->
+      <div class="absolute inset-y-0 left-0 flex items-center">
 
-        <button
+
+         <button
           type="button"
           [class.active]="isToggled"
           (click)="toggle()"
-          class="navbar-button-toggle inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+          class="navbar-button-toggle inline-flex sm:hidden items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white no-focus"
           aria-controls="mobile-menu"
           aria-expanded="false"
         >
           <span class="sr-only">Open main menu</span>
-          <!--
-            Icon when menu is closed.
-            Menu open: "hidden", Menu closed: "block"
-          -->
           <i
-            class="navbar-button-toggle--icon fa-solid fa-bars"
+            class="navbar-button-toggle--icon-bars fa-solid fa-bars"
             *ngIf="!isToggled"
           ></i>
-
-          <!--
-            Icon when menu is open.
-            Menu open: "block", Menu closed: "hidden"
-          -->
           <i
-            class="navbar-button-toggle--icon fa-solid fa-x"
+            class="navbar-button-toggle--icon-x  fa-solid fa-x"
             *ngIf="isToggled"
           ></i>
         </button>
         <div
           *ngIf="isToggled"
           id="mobile-menu"
-          class="navbar-button-toggle-content bg-stone-300"
+          class="navbar-button-toggle-content fixed inset-0 min-h-screen bg-gray-800 bg-opacity-100 transition-opacity lg:hidden">
         >
-          <div class="px-1 py-1">
-           
-            <a
-              routerLink="skills"
-              routerLinkActive="active"
-              class="navbar-button-toggle--a hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
-              >Skill</a
-            >
+          <div class="absolute left-0 min-h-screen w-2/3 bg-primary py-4 px-8 shadow md:w-1/3">
+<ul class="mt-8 flex flex-col">
+<li class="py-2">
+  <a
+  routerLink="skills"
+  routerLinkActive="active"
+  class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+  >Skill</a
+></li>
+<li class="py-2"> <a
+  routerLink="proyecto"
+  routerLinkActive="active"
+  class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+  >Proyectos</a
+></li>
+<li class="py-2">
+  <a
+    routerLink="cursos"
+    routerLinkActive="active"
+    class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+    >Cursos</a
+  ></li>
+<li class="py-2">
+  <a
+    routerLink="sobreMi"
+    routerLinkActive="active"
+    class="navbar-button-toggle--a hover:bg-gray-700 cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+    >Sobre Mi</a
+  ></li>
+</ul>
 
-            <a
-              routerLink="proyectos"
-              routerLinkActive="active"
-              class="navbar-button-toggle--a hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
-              >Proyectos</a
-            >
 
-            <a
-              routerLink="cursos"
-              routerLinkActive="active"
-              class="navbar-button-toggle--a hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
-              >Cursos</a
-            >
 
-            <a
-              routerLink="sobreMi"
-              routerLinkActive="active"
-              class="navbar-button-toggle--a hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
-              >Sobre Mi</a
-            >
+
+
           </div>
         </div>
       </div>
@@ -90,9 +87,9 @@
       <div
         class="navbar-content-div--container flex items-center justify-around gap-16 mr-10"
       >
-        <div class="hidden sm:ml-6 sm:block">
+        <div class="hidden sm:ml-6 md:block">
           <div class="navbar-content-div--list-desktop flex space-x-1">
-            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+
             <div
               class="hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium items-center flex gap-1"
             >
@@ -149,3 +146,231 @@
   </div>
 
 </nav>
+
+<!--
+ <div class="w-full z-50 top-0 py-3 sm:py-5  absolute
+ ">
+ <div class="container flex items-center justify-between">
+   <div>
+     <a href="/">
+       <img src="../../../../assets/Logo-icon.png" class="w-24 lg:w-48" alt="logo image" />
+     </a>
+   </div>
+   <div class="hidden lg:block">
+     <ul class="flex items-center">
+
+       <li class="group pl-6">
+
+         <span
+
+           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+           >About</span
+         >
+
+         <span
+           class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
+         ></span>
+       </li>
+
+       <li class="group pl-6">
+
+         <span
+
+           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+           >Services</span
+         >
+
+         <span
+           class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
+         ></span>
+       </li>
+
+       <li class="group pl-6">
+
+         <span
+
+           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+           >Portfolio</span
+         >
+
+         <span
+           class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
+         ></span>
+       </li>
+
+       <li class="group pl-6">
+
+         <span
+
+           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+           >Clients</span
+         >
+
+         <span
+           class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
+         ></span>
+       </li>
+
+       <li class="group pl-6">
+
+         <span
+
+           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+           >Work</span
+         >
+
+         <span
+           class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
+         ></span>
+       </li>
+
+       <li class="group pl-6">
+
+         <span
+
+           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+           >Statistics</span
+         >
+
+         <span
+           class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
+         ></span>
+       </li>
+
+       <li class="group pl-6">
+
+         <span
+
+           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+           >Blog</span
+         >
+
+         <span
+           class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
+         ></span>
+       </li>
+
+       <li class="group pl-6">
+
+         <span
+
+           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+           >Contact</span
+         >
+
+         <span
+           class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
+         ></span>
+       </li>
+
+     </ul>
+   </div>
+   <div class="block lg:hidden">
+     <button  >
+       <i class="fa-solid fa-bars text-4xl text-white" *ngIf="!isToggled"></i>
+     </button>
+   </div>
+ </div>
+</div>
+<div
+  class="pointer-events-none fixed inset-0 z-70 min-h-screen bg-black bg-opacity-70 opacity-0 transition-opacity lg:hidden"
+>
+  <div
+    class="absolute right-0 min-h-screen w-2/3 bg-primary py-4 px-8 shadow md:w-1/3"
+    >
+    <button
+      class="absolute top-0 right-0 mt-4 mr-4"
+
+    >
+      <img src="../../../../assets/Logo-icon.png" class="h-10 w-auto" alt="" />
+    </button>
+
+    <ul *ngIf="isToggled" class="mt-8 flex flex-col">
+
+      <li class="py-2">
+
+        <span
+
+          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+          >About</span
+        >
+
+      </li>
+
+      <li class="py-2">
+
+        <span
+
+          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+          >Services</span
+        >
+
+      </li>
+
+      <li class="py-2">
+
+        <span
+
+          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+          >Portfolio</span
+        >
+
+      </li>
+
+      <li class="py-2">
+
+        <span
+
+          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+          >Clients</span
+        >
+
+      </li>
+
+      <li class="py-2">
+
+        <span
+
+          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+          >Work</span
+        >
+
+      </li>
+
+      <li class="py-2">
+
+        <span
+
+          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+          >Statistics</span
+        >
+
+      </li>
+
+      <li class="py-2">
+
+        <span
+
+          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+          >Blog</span
+        >
+
+      </li>
+
+      <li class="py-2">
+
+        <span
+
+          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+          >Contact</span
+        >
+
+      </li>
+
+    </ul>
+  </div>
+</div>
+
+
+
+ -->
