--- a/src/app/sobre-mi/sobre-mi.component.css
+++ b/src/app/sobre-mi/sobre-mi.component.css
@@ -1,25 +1,32 @@
 .sobremi-container{
- display: flex;
- height: 100%;
-align-items: stretch;
-  flex-grow: 1;
+  background: #07c4ff;
+  margin-bottom: 2em;
 }
 
 
-
-.sobremi-container--img{
-  width: 250px;
-  height: 250px;
-  margin-top: 3em;
+.sobremi-container-titulo{
+  width: 100%;
+  height: 80px;
+  background-color: #0080d9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2em;
+  box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(16,154,173,0.75);
 }
 
-.sobremi-container--subcontainer--titulo{
-font-family: var(--tipografiaHeader);
-color: #161516;
+.sobremi-container-titulo--titulo{
+  font-size: 40px;
+  font-weight: 800;
+  font-family: var(--tipografiaHeader);
+color: aliceblue;
 }
+
 
 .sobremi-container--subcontainer--parrafo{
   font-family: var(--tipografiaHeader);
-  color: #161516;
+  color: aliceblue;
 }
 
