--- a/src/app/sobre-mi/sobre-mi.component.html
+++ b/src/app/sobre-mi/sobre-mi.component.html
@@ -5,7 +5,7 @@
     </h1>
   </div>
   <div class="sobremi-container--subcontainer  px-6 pt-1 lg:px-8">
-        <p class="sobremi-container--subcontainer--parrafo mt-6 text-lg leading-8">
+        <p class="sobremi-container--subcontainer--parrafo mt-6 ">
           Hola me llamo Matias Sabbadini, tengo 31 años y naci en Neuquen, Argentina.
           Soy un estudiante de programación autodidacta con iniciativa y ganas de superarse.
           Cuento con la capacidad de trabajar en equipo y resolución de problemas.
