--- a/src/app/cursos/datos/datos.component.css
+++ b/src/app/cursos/datos/datos.component.css
@@ -4,11 +4,27 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 2em;
+}
+
+.cursos-datos-container--subcontainer {
+  height: auto;
+  width: 90%;
+  transition: all .3s;
+  position: relative;
+  border-radius: .5rem;
+   background-color: gray;
+  box-shadow: 0px 5px 2px 5px rgba(0, 0, 0, 0.5) !important;
+}
+
+.cursos-datos-container--subcontainer:hover {
+  transform: scale(1.03);
 }
 
 
 .cursos-datos-card-container{
   background-color: gray;
+
 }
 
 .cursos-datos-card-container-titulo--titulo{
@@ -19,4 +35,25 @@
 .cursos-datos-card-container-titulo--descripcion{
   font-family: var(--tipografiaHeader);
 color: aliceblue;
+}
+
+
+@media (min-width: 450px) {
+  .cursos-datos-container--subcontainer {
+    width: 270px;
+  }
+}
+
+
+@media (min-width: 768px) {
+  .cursos-datos-container--subcontainer {
+    width: 350px;
+  }
+}
+
+
+@media (min-width: 1024px) {
+  .cursos-datos-container{
+    gap: 4em;
+      }
 }
