--- a/src/app/proyectos/datos/datos.component.css
+++ b/src/app/proyectos/datos/datos.component.css
@@ -4,6 +4,23 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap:2em;
+}
+
+
+.proyectos-datos-container--subcontainer{
+  height: auto;
+  width: 90%;
+  transition: all .3s;
+  position: relative;
+  border-radius: .5rem;
+   background-color: gray;
+  box-shadow: 0px 5px 2px 5px rgba(0, 0, 0, 0.5) !important;
+}
+
+
+.proyectos-datos-container--subcontainer:hover{
+  transform: scale(1.03);
 }
 
 .proyectos-datos-card-container{
@@ -18,4 +35,24 @@
 .proyectos-datos-card-container-titulo--descripcion{
   font-family: var(--tipografiaHeader);
   color: aliceblue;
+}
+
+@media (min-width: 450px) {
+  .proyectos-datos-container--subcontainer {
+    width: 270px;
+  }
+}
+
+
+@media (min-width: 768px) {
+  .proyectos-datos-container--subcontainer {
+    width: 350px;
+  }
+}
+
+
+@media (min-width: 1024px) {
+  .proyectos-datos-container{
+    gap: 4em;
+      }
 }
