termine de dar estilos a los componentes

--- a/src/app/cursos/datos/datos.component.html
+++ b/src/app/cursos/datos/datos.component.html
@@ -9,7 +9,7 @@
             {{datos.nombre}}
           </h3>
         </div>
-        <p class="datos-card-container-titulo--descripcion text-base">
+        <p class="datos-card-container-titulo--descripcion">
         {{datos.descripcion}}
         </p>
       </div>
