--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer-contenedor bg-gray-800 rounded-sm w-full">
+<footer class="footer-contenedor rounded-sm w-full">
   <div class="footer-contenedor--div w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
     <span class="footer-contenedor--div-span text-smsm:text-center">© 2023 <a href="https://flowbite.com/" class="hover:underline">Matias Sabbadini™</a>. All Rights Reserved.
   </span>
