--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-gray-800 rounded-sm py-3">
+<nav class="nabvar-container rounded-sm py-3">
   <div class="mx-auto max-w-7xl px-1 sm:px-1 lg:px-1">
     <div class="relative flex h-16 items-center justify-center">
       <div class="absolute inset-y-0 left-0 flex items-center">
