--- a/src/app/skilles/informacion/informacion.component.html
+++ b/src/app/skilles/informacion/informacion.component.html
@@ -17,11 +17,11 @@
 <div class="informacion-container-card container">
   <div class=" flex flex-column  lg:flex my-2">
     <div
-      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+      class="informacion-card flex flex-col  border-gray-400 rounded p-4 mx-3 leading-normal"
     >
-      <div class="text-gray-900 font-bold text-xl mb-2">
+      <div class= "font-bold text-xl mb-2">
         <h2 class="informacion-container-titulo text-center">HTML</h2>
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+        <hr class="h-px my-8 border-0" />
       </div>
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
@@ -39,7 +39,7 @@
               </div>
               <div class="text-sm">
                 <p
-                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                  class="informacion-container-card-nombre text-center leading-none"
                 >
                   {{ html.nombre }}
                 </p>
@@ -53,11 +53,11 @@
 
   <div class=" flex flex-column  lg:flex my-2">
     <div
-      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+      class="informacion-card flex flex-col border-gray-400 rounded p-4 mx-3 leading-normal"
     >
-      <div class="text-gray-900 font-bold text-xl mb-2">
+      <div class="font-bold text-xl mb-2">
         <h2 class="informacion-container-titulo text-center">CSS</h2>
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+        <hr class="h-px my-8 border-0" />
       </div>
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
@@ -75,7 +75,7 @@
               </div>
               <div class="text-sm">
                 <p
-                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                  class="informacion-container-card-nombre text-center leading-none"
                 >
                   {{ css.nombre }}
                 </p>
@@ -90,11 +90,11 @@
 
   <div class=" flex flex-column  lg:flex my-2">
     <div
-      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+      class="informacion-card flex flex-col  border-gray-400 rounded p-4 mx-3 leading-normal"
     >
-      <div class="text-gray-900 font-bold text-xl mb-2">
+      <div class= "font-bold text-xl mb-2">
         <h2 class="informacion-container-titulo text-center">Javascript</h2>
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+        <hr class="h-px my-8 border-0" />
       </div>
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
@@ -112,7 +112,7 @@
               </div>
               <div class="text-sm">
                 <p
-                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                  class="informacion-container-card-nombre text-center leading-none"
                 >
                   {{ javascript.nombre }}
                 </p>
@@ -126,11 +126,11 @@
 
   <div class=" flex flex-column  lg:flex my-2">
     <div
-      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+      class="informacion-card flex flex-col  border-gray-400 rounded p-4 mx-3 leading-normal"
     >
-      <div class="text-gray-900 font-bold text-xl mb-2">
+      <div class= "font-bold text-xl mb-2">
         <h2 class="informacion-container-titulo text-center">Backend</h2>
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+        <hr class="h-px my-8 border-0" />
       </div>
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
@@ -148,7 +148,7 @@
               </div>
               <div class="text-sm">
                 <p
-                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                  class="informacion-container-card-nombre text-center leading-none"
                 >
                   {{ backend.nombre }}
                 </p>
@@ -162,11 +162,11 @@
 
   <div class=" flex flex-column  lg:flex my-2">
     <div
-      class="informacion-card flex flex-col  border-gray-400  bg-white rounded p-4 mx-3 leading-normal"
+      class="informacion-card flex flex-col  border-gray-400 rounded p-4 mx-3 leading-normal"
     >
-      <div class="text-gray-900 font-bold text-xl mb-2">
+      <div class= "font-bold text-xl mb-2">
         <h2 class="informacion-container-titulo text-center">Otros</h2>
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+        <hr class="h-px my-8 border-0" />
       </div>
       <div>
         <div class="informacion-card-container--img-nombre flex flex-row flex-wrap gap-5">
@@ -184,7 +184,7 @@
               </div>
               <div class="text-sm">
                 <p
-                  class="informacion-container-card-nombre text-gray-900 text-center leading-none informacion-container-titulo--nombre"
+                  class="informacion-container-card-nombre text-center leading-none"
                 >
                   {{ otros.nombre }}
                 </p>
@@ -195,4 +195,4 @@
       </div>
     </div>
   </div>
-</div>
+
