--- a/src/app/cursos/cursos.component.css
+++ b/src/app/cursos/cursos.component.css
@@ -1,5 +1,4 @@
 .cursos-container{
-  background: #07c4ff;
   margin-bottom: 2em;
 }
 
@@ -7,7 +6,7 @@
 .cursos-container-titulo{
   width: 100%;
   height: 80px;
-  background-color: #0080d9;
+  background-color: var(--colorVerdeCeleste);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,8 +18,8 @@
 
 
 .cursos-titulo{
-  font-size: 40px;
+  font-size: 50px;
   font-weight: 800;
-  font-family: var(--tipografiaHeader);
-color: aliceblue;
+  font-family: var(--tipografiaGeneral);
+  color: var(--colorGris);
 }
