--- a/src/app/cursos/datos/datos.component.css
+++ b/src/app/cursos/datos/datos.component.css
@@ -13,7 +13,7 @@
   transition: all .3s;
   position: relative;
   border-radius: .5rem;
-   background-color: gray;
+   background-color: var(--colorGris);
   box-shadow: 0px 5px 2px 5px rgba(0, 0, 0, 0.5) !important;
 }
 
@@ -23,19 +23,24 @@
 
 
 .cursos-datos-card-container{
-  background-color: gray;
+  background-color: var(--colorAzulNegro);
 
 }
 
 .cursos-datos-card-container-titulo--titulo{
- font-family: var(--tipografiaHeader);
- color: aliceblue;
+  color: var(--colorBlanco);
+  font-family: var(--tipografiaCards);
+  font-size: 35px;
+  font-weight: 700;
 }
 
-.cursos-datos-card-container-titulo--descripcion{
-  font-family: var(--tipografiaHeader);
-color: aliceblue;
+.datos-card-container-titulo--descripcion{
+  color: var(--colorBlanco);
+  font-family: var(--tipografiaCards);
+  font-size: 30px;
+  font-weight: 700;
 }
+
 
 
 @media (min-width: 450px) {
@@ -56,4 +61,10 @@ color: aliceblue;
   .cursos-datos-container{
     gap: 4em;
       }
+}
+
+@media (min-width: 1300px) {
+  .cursos-datos-container{
+    gap: 6em;
+  }
 }
