--- a/src/app/proyectos/datos/datos.component.css
+++ b/src/app/proyectos/datos/datos.component.css
@@ -14,7 +14,7 @@
   transition: all .3s;
   position: relative;
   border-radius: .5rem;
-   background-color: gray;
+   background-color: var(--colorGris);
   box-shadow: 0px 5px 2px 5px rgba(0, 0, 0, 0.5) !important;
 }
 
@@ -24,29 +24,60 @@
 }
 
 .proyectos-datos-card-container{
-  background-color: gray;
+  background-color: var(--colorAzulNegro);
 }
 
 .proyectos-datos-card-container-titulo--titulo{
-  font-family: var(--tipografiaHeader);
-  color: aliceblue;
+  font-family: var(--tipografiaCards);
+  color: var(--colorBlanco);
+  font-size: 30px;
 }
 
-.proyectos-datos-card-container-titulo--descripcion{
-  font-family: var(--tipografiaHeader);
-  color: aliceblue;
+.proyectos-datos-card-container-titulo--descripcion {
+  font-family: var(--tipografiaCards);
+  color: var(--colorBlanco);
+  font-size: 20px;
 }
+
+.proyectos-datos-card-container-boton{
+  font-family: var(--tipografiaCards);
+  color: var(--colorGris);
+  background-color: var(--colorVerdeCeleste);
+  font-size: 20px;
+}
+
 
 @media (min-width: 450px) {
   .proyectos-datos-container--subcontainer {
     width: 270px;
   }
+
+  .proyectos-datos-card-container-titulo--titulo{
+    font-size: 35px;
+  }
+
+  .proyectos-datos-card-container-titulo--descripcion {
+    font-size: 22px;
+  }
+
 }
 
 
 @media (min-width: 768px) {
   .proyectos-datos-container--subcontainer {
     width: 350px;
+  }
+
+  .proyectos-datos-card-container-titulo--titulo{
+    font-size: 45px;
+  }
+
+  .proyectos-datos-card-container-titulo--descripcion {
+    font-size: 30px;
+  }
+
+  .proyectos-datos-card-container-boton{
+    font-size: 25px;
   }
 }
 
@@ -55,4 +86,9 @@
   .proyectos-datos-container{
     gap: 4em;
       }
+
+      .proyectos-datos-card-container-titulo--titulo{
+        font-size: 50px;
+      }
+
 }
