--- a/src/app/proyectos/proyectos.component.css
+++ b/src/app/proyectos/proyectos.component.css
@@ -1,12 +1,11 @@
 .proyectos-container{
-  background: #07c4ff;
   margin-bottom: 2em;
 }
 
 .proyectos-container-titulo{
   width: 100%;
   height: 80px;
-  background-color: #0080d9;
+  background-color: var(--colorVerdeCeleste);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,9 +16,9 @@
 }
 
 .proyectos-container-titulo--titulo{
-  font-size: 40px;
+  font-size: 50px;
   font-weight: 800;
-  font-family: var(--tipografiaHeader);
-color: aliceblue;
+  font-family: var(--tipografiaGeneral);
+  color: var(--colorGris);
 }
 
