--- a/src/app/skilles/skills.component.css
+++ b/src/app/skilles/skills.component.css
@@ -1,12 +1,9 @@
-.skills-container{
-  background: #07c4ff;
-}
 
 .skills-container-titulo{
   width: 100vw;
   height: 80px;
   padding: 1em;
-  background-color: #0080d9;
+  background-color: var(--colorVerdeCeleste);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,10 +14,10 @@
 }
 
 .skills-container-titulo--titulo{
-  font-size: 65px;
+  font-size: 50px;
   font-weight: 800;
-  font-family: var(--tipografiaHeader);
-color: aliceblue;
+  font-family: var(--tipografiaGeneral);
+color: var(--colorGris);
 }
 
 .skill-container-informacion{
