--- a/src/app/sobre-mi/sobre-mi.component.css
+++ b/src/app/sobre-mi/sobre-mi.component.css
@@ -1,5 +1,4 @@
 .sobremi-container{
-  background: #07c4ff;
   margin-bottom: 2em;
   width: 100%;
 }
@@ -8,7 +7,7 @@
 .sobremi-container-titulo{
   width: 100%;
   height: 80px;
-  background-color: #0080d9;
+  background-color: var(--colorVerdeCeleste);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,10 +18,10 @@
 }
 
 .sobremi-container-titulo--titulo{
-  font-size: 40px;
+  font-size: 50px;
   font-weight: 800;
-  font-family: var(--tipografiaHeader);
-color: aliceblue;
+  font-family: var(--tipografiaGeneral);
+color: var(--colorGris);
 }
 
 .sobremi-container--subcontainer{
@@ -32,8 +31,9 @@ color: aliceblue;
 }
 
 .sobremi-container--subcontainer--parrafo{
-  font-family: var(--tipografiaHeader);
-  color: aliceblue;
+  color: var(--colorGris);
+  font-weight: 700;
+  font-family: var(--tipografiaGeneral);
   line-height: 2rem;
   font-size: 20px;
 }
