--- a/src/app/sobre-mi/sobre-mi.component.html
+++ b/src/app/sobre-mi/sobre-mi.component.html
@@ -11,7 +11,7 @@
           Cuento con la capacidad de trabajar en equipo y resolución de problemas.
           Busco mi primer trabajo IT para poder adquirir nuevas experiencias en lo profesional y en lo personal.
           He estudiado el curso de Programación web full stack en Digital House gracias a una beca otorgada por la Fundación Formar en conjunto con Pampa Energia y Banco Santander.
-          En este curso me capacite en las siguientes tecnologías en JavaScript, HTML5, CSS3, React JS, Node JS, Express JS, Mysql, GIT, Bootstrap, entre otras.</p>
+          En este curso me capacite en las siguientes tecnologías en JavaScript, HTML5, CSS3, React JS, Node JS, Express JS, Mysql, GIT, Bootstrap y actualmente me encuentro aprendiendo Angular y Typescript.</p>
       </div>
     </div>
 
