--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,17 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dongle&display=swap');
 
 :root{
   --tipografiaHeader: 'Nunito', sans-serif;
-  --colorLetrasHeader: #FCF8FF;
   --tipografiaGeneral: 'Space Grotesk', sans-serif;
-
+  --tipografiaCards: 'Dongle', sans-serif;
+  --colorCelesteClaro :  #85cfff;
+  --colorVerdeCeleste :  #ccf6ff;
+  --colorAzulNegro :  #0f1a35;
+  --colorGris :  #76777c;
+  --colorBlanco :  #e2e2e2;
 }
 
 * {
@@ -19,8 +24,12 @@
 html,body {
   width: 100%;
  height: 100%;
- background: #07c4ff;
+ background: var(--colorCelesteClaro);
  scroll-behavior: smooth;
 }
 
-
+@media (min-height: 845px) {
+body {
+  min-height: 845px
+}
+}
